# gnome-sound-recorder

./: Makefile.am  NEWS  autogen.sh  configure.ac  meson.build
data/: meson.build  org.gnome.SoundRecorder.data.gresource.xml  org.gnome.gnome-sound-recorder.gschema.xml
data/appdata/: Makefile.am
po/: LINGUAS  af.po  be.po  bs.po  ca.po  ca@valencia.po  el.po  eo.po  eu.po  fa.po  hr.po  id.po  it.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  pt.po  ru.po  sl.po  sr.po  tr.po  zh_CN.po  zh_TW.po
src/: application.js  audioProfile.js  fileUtil.js  info.js  listview.js  mainWindow.js  meson.build  play.js  preferences.js  record.js  waveform.js
